# mandy

./: .gitignore  Pipfile  README.md  objects.inv  pyproject.toml  search.html  searchindex.js
build-source/: Makefile
build-source/source/: bib.rst  conf.py  index.rst
build-source/source/CAST/: build-liouville.rst  contactMorse.rst  index.rst
build-source/source/Coding/: index.rst
build-source/source/math/: bypass.rst  contact-morse-theory.rst  contact-structure-3d.rst  index.rst
build-source/source/physics/: index.rst  quantum-theory-of-fields.rst  the-quantum-theory-of-fields.rst
docs/: .buildinfo  .gitignore  CNAME  Makefile  bib.html  contact3d.html  contactMorse.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/CAST/: contact3d.html  contactMorse.html  index.html
docs/CAST/build_liouville/: first_model.html  index.html
docs/CAST/coLegendrian/: coLeg5d.html  index.html
docs/Coding/: index.html  vim.html
docs/_sources/: bib.rst.txt  contact3d.rst.txt  contactMorse.rst.txt  index.rst.txt
docs/_sources/CAST/: contact3d.rst.txt  contactMorse.rst.txt  index.rst.txt
docs/_sources/Coding/: vim.rst.txt
docs/_sources/math/: bypass.rst.txt  index.rst.txt  (+2 more)
docs/_static/: basic.css
docs/math/: bypass.html  contact-morse-theory.html  contact-structure-3d.html  index.html
docs/physics/: index.html  quantum-theory-of-fields.html  the-quantum-theory-of-fields.html
docs/source/: index.rst
docs/trivia/: bypass.html  contactSubmfd.html  index.html
html/: .buildinfo  search.html
html/_sources/: contact3d.rst.txt
(+58 files in other folders)
