[tool.poetry]
name = "mandy"
version = "0.1.0"
description = ""
authors = ["Yang Huang <hymath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pydata-sphinx-theme = "^0.15.2"
python = "^3.9"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"
sphinx-design = "^0.5.0"
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
