[tool.poetry]
name = "mandy"
version = "0.1.0"
description = ""
authors = ["Yang Huang <hymath@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-design = "*"
watchfiles = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
