[tool.poetry]
name = "mandy"
description = ""
authors = ["Yang Huang <hymath@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-design = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
